apps/campusparent/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campusparent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: campusparent-tls
      hosts:
        - campusparent.prodv2.cedille.club
        - www.campusparent.prodv2.cedille.club
  rules:
    - host: campusparent.prodv2.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: campusparent-svc
                port:
                  number: 80
    - host: www.campusparent.prodv2.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: campusparent-svc
                port:
                  number: 80
